Fix team dropdown z-index issue, fix copy icon, fix spacing before icons

--- a/frontend/pages/policies/ManagePoliciesPage/_styles.scss
+++ b/frontend/pages/policies/ManagePoliciesPage/_styles.scss
@@ -164,6 +164,7 @@
           .name__cell {
             .policy-name-cell {
               display: flex; // required for inline icon
+              gap: $pad-xsmall;
 
               .tooltip-base {
                 display: inline-flex;
